--- a/src/main/react-app/src/index.css
+++ b/src/main/react-app/src/index.css
@@ -1,13 +1,24 @@
 body {
   margin: 0;
+  height: 100%;
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display:flex;
+  flex-flow:column;
+  background-color: black ;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
 }
