--- a/src/main/react-app/src/index.css
+++ b/src/main/react-app/src/index.css
@@ -9,7 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display:flex;
   flex-flow:column;
-  background-color: black ;
+  /* background-color: black ; */
 }
 
 code {
