--- a/src/main/react-app/src/App.css
+++ b/src/main/react-app/src/App.css
@@ -3,8 +3,12 @@
 }
 
 
-.showcaseDetail:hover {
-  background-color: brown;
-  transition: 3s;
-}
 
+.container {
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  margin-top: 2%;
+  padding: 0%;
+  display: inline-block;
+}
