--- a/src/main/react-app/src/index.css
+++ b/src/main/react-app/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  height: 100%;
+  /* height: 100%; */
   min-height: 100%;
   font-family: 'Hunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -19,7 +19,7 @@ code {
 
 html {
   margin: 0px;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 
