--- a/src/main/react-app/src/App.css
+++ b/src/main/react-app/src/App.css
@@ -6,12 +6,8 @@
 
 
 .container {
-  width: 100%;
-  height: 100%;
+  padding: 0% 10%;
   margin: 0%;
-  margin-top: 2%;
-  padding: 0%;
-  display: inline-block;
 }
 
 
