--- a/src/main/react-app/src/App.css
+++ b/src/main/react-app/src/App.css
@@ -14,7 +14,10 @@
 .overlay {
   z-index: 1;
   position: fixed;
-  background: rgba(0, 0, 0, 0.8);
+  /* background: rgba(0, 0, 0, 0.8); */
+  background-color: #ffffff10;
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
   will-change: opacity;
   top: 0;
   bottom: 0;
