--- a/src/main/react-app/src/index.css
+++ b/src/main/react-app/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   /* height: 100%; */
-  min-height: 100%;
+  height: 100%;
   font-family: 'Hunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,9 +9,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-flow: column;
-  background-color: #F5F5F5;
+  /* background-color: #F5F5F5;
   background: rgb(6,28,37);
-  background: linear-gradient(0deg, rgba(6,28,37,1) 0%, rgba(255,255,255,1) 80%);
+  background: linear-gradient(0deg, rgba(6,28,37,1) 0%, rgba(255,255,255,1) 80%); */
+  background-image: url(./img/background.jpg);
 }
 
 code {
@@ -21,7 +22,7 @@ code {
 
 html {
   margin: 0px;
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
   background: rgb(6,28,37);
 }
