--- a/src/main/react-app/src/index.css
+++ b/src/main/react-app/src/index.css
@@ -12,7 +12,7 @@ body {
   /* background-color: #F5F5F5;
   background: rgb(6,28,37);
   background: linear-gradient(0deg, rgba(6,28,37,1) 0%, rgba(255,255,255,1) 80%); */
-  background-image: url(./img/background.jpg);
+
 }
 
 code {
@@ -25,6 +25,11 @@ html {
   height: 100%;
   width: 100%;
   background: rgb(6,28,37);
+  background-image: url(./img/background.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 @font-face {
