--- a/src/main/react-app/src/App.css
+++ b/src/main/react-app/src/App.css
@@ -48,10 +48,10 @@
 
 .card-content-container {
   width: 100%;
-  height: 100%;
-  position: relative;
+  height: 90vh;
+  position: fixed;
   display: block;
-  pointer-events: none;
+  /* pointer-events: all; */
 }
 
 .card-content-container.open {
@@ -62,6 +62,8 @@
   z-index: 1;
   overflow: hidden;
   padding: 40px 0;
+  overflow-y: auto;
+  /* position: none; */
 }
 
 .content-container {
@@ -119,7 +121,10 @@
     color: rgb(208, 168, 92);
     font-weight: bold;
     font-size: 1.1vw;
-    margin-top: 3%;
+    margin-top: 0%;
+}
+.card-typography-title.detail {
+  margin-top: 3%;
 }
 .card {
     width: 100%;
