--- a/src/main/react-app/src/App.css
+++ b/src/main/react-app/src/App.css
@@ -10,6 +10,12 @@
   margin: 0%;
 }
 
+.container.chart {
+  height: 50vh;
+  margin-top: 1%;
+  min-height: 300px;
+}
+
 
 .overlay {
   z-index: 1;
@@ -105,56 +111,68 @@
   font-size: 0.8vw;
   font-family: 'Nunito';
 }
+
 .typography-title {
   margin: 1.5%;
   color: rgb(208, 168, 92);
   font-weight: bold;
   font-size: 1.1vw;
 }
+
 .card-typography {
-    margin: 2%;
-    color: rgb(208, 168, 92);
-    font-size: 0.9vw;
+  margin: 2%;
+  color: rgb(208, 168, 92);
+  font-size: 0.9vw;
 }
+
 .card-typography-title {
-    margin: 2%;
-    color: rgb(208, 168, 92);
-    font-weight: bold;
-    font-size: 1.1vw;
-    margin-top: 0%;
+  margin: 2%;
+  color: rgb(208, 168, 92);
+  font-weight: bold;
+  font-size: 1.1vw;
+  margin-top: 0%;
 }
+
 .card-typography-title.detail {
   margin-top: 3%;
 }
+
 .card {
-    width: 100%;
-    display: inline-block;
-    margin: 0%;
-    background-color: rgb(6, 28, 37);
-    border: 0.2vw solid rgb(208, 168, 92);
+  width: 100%;
+  display: inline-block;
+  margin: 0%;
+  background-color: rgb(6, 28, 37);
+  border: 0.2vw solid rgb(208, 168, 92);
 }
+
 .card-media {
-    border-radius: 50%;
-    width: 20%;
-    margin: auto;
-    border: 0.15vw solid rgb(208, 168, 92);
+  border-radius: 50%;
+  width: 20%;
+  margin: auto;
+  border: 0.15vw solid rgb(208, 168, 92);
 }
+
 .card-media-rank {
   width: 15%;
   margin: auto;
 }
 
+.button-group {
+  margin: auto;
+}
 
 .button {
   color: rgb(208, 168, 92);
   background-color: rgba(6, 28, 37);
   border-color: rgb(208, 168, 92);
 }
+
 .selected-button {
   color: rgba(6, 28, 37);
   background-color: rgb(208, 168, 92);
   border-color: rgb(208, 168, 92);
 }
+
 .detail-container {
   display: inline-block;
   width: 29%;
@@ -162,45 +180,52 @@
 }
 
 
-@media all and (max-width:800px) 
-{
-    .detail-container
-    {
-        display: block; 
-        float: none; 
-        width: 100%;
-        margin: auto;
-        margin-top: 2%;
-        /* height: 600px; */
-    }
-    .card
-    {
-      /* height: 210px; */
-      display: block;
-    }
-    .card-media
-    {
-      width: 25%
-    }
-    .card-typography-title
-    {
-      font-size: 22px;
-    }
-    .card-typography
-     {
-       font-size: 20px;
-     }
-     .typography-title
-    {
-      font-size: 20px;
-      margin: 2%;
-    }
-     .typography
-     {
-       font-size: 10px;
-     }
-     .button-group
-     {
-       margin-top: 3%;
-     }
+@media all and (max-width:800px) {
+  .detail-container {
+    display: block;
+    float: none;
+    width: 100%;
+    margin: auto;
+    margin-top: 2%;
+    /* height: 600px; */
+  }
+
+  .card {
+    /* height: 210px; */
+    display: block;
+  }
+
+  .card-media {
+    width: 25%
+  }
+
+  .card-typography-title {
+    font-size: 22px;
+  }
+
+  .card-typography {
+    font-size: 20px;
+  }
+
+  .typography-title {
+    font-size: 20px;
+    margin: 2%;
+  }
+
+  .typography {
+    font-size: 80%;
+  }
+
+  .button-group {
+    margin-top: 3%;
+    max-width: 90vw;
+  }
+
+  .container.chart {
+    padding: 0%;
+  }
+
+  .container.bar {
+    padding: 0%;
+  }
 }
