--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -112,6 +112,12 @@
   font-family: 'Nunito';
 }
 
+.typography.showcase.title {
+  font-size: 20px;
+  margin: 3%;
+  display: none;
+}
+
 .typography-title {
   margin: 1.5%;
   color: rgb(208, 168, 92);
@@ -227,5 +233,9 @@
 
   .container.bar {
     padding: 0%;
+  }
+
+  .typography.showcase.title {
+    display: block;
   }
 }
